2020. 5.15. Implemented ZTK processors for zTexture. [zeo_texture, zeo_shape, zeo_mshape]
2020. 5.15. Defined zTextureArray and added an array of textures in zMShape3D. [zeo_texture, zeo_mshape]
2020. 5.15. Added texture member in zShape3D. [zeo_shape]
2020. 5.15. Defined ZEO_ERR_TEXTURE_INVALID_COORD_ID, ZEO_WARN_TEXTURE_COORD_UNMATCH and ZEO_WARN_TEXTURE_EMPTY. [zeo_errmsg, zeo_texture]
2020. 5.15. Added zeo_texture. [zeo_texture, zeo_shape]
2020. 5.15. Added zVec2DFromZTK. [zeo_vec2d]
2020. 5.15. Added zTri2D class. [zeo_tri2d]
2020. 5.15. Modified zEdge3DFPrint and zTri3DFPrint. [zeo_elem]
2020. 5.15. Modified zVec3DDataFPrint to put commas between numbers. [zeo_vec3d]
2020. 5.15. Modified zMat3DFromZTK. [zeo_mat3d]
2020. 5.15. Modified specifications of zVec2D and zMat2D. [zeo_vec2d, zeo_mat2d, zeo_elem]
2020. 5.14. Added zVec2DArray. [zeo_vec2d]
2020. 5. 4. Added zPlane3DPointIsOn. [zeo_elem]
2020. 5. 3. Modified zTri3DPointDist. [zeo_elem]
2020. 5. 2. Abolished zeo_col_abbtree. [zeo_col, zeo_col_aabbtree, makefile]
2020. 5. 2. Renamed pmin and pmax members of zAABox3D to min and max, respectively. [zeo_bv_aabb, zeo_col_box, zeo_col_aabbtree]
2020. 4.30. Debugged zBBall. [zeo_bv_bball]
2020. 4. 3. Modified zeo_phconv to accept uppercase suffices. [app]
2020. 4. 3. Modified _zShape3DImportFromZTK to accept uppercase suffices. [zeo_shape]
2020. 4. 3. Modified specification of _zShape3DImportFromZTK to accept a scaling factor. [zeo_shape]
2020. 4. 3. Added scaling operation in zeo_phconv. [app]
2020. 4. 3. Added zPH3DScale. [zeo_ph]
2020. 4. 3. Added scaling operation in zeo_phconv (dummy). [app]
2020. 4. 3. Debugged _zShape3DImportFromZTK. [zeo_shape]
2020. 4. 3. Renamed a member mirrored in _zShape3DRefPrp to imported. [zeo_shape]
2020. 4. 3. Defined import key for zShape3D in ZTK and added _zShape3DImportFromZTK. [zeo_errmsg, zeo_shape]
2020. 4. 3. Modified zeo_phconv reflecting newly added zShape3DFReadSTL and zShape3DFReadPLY. [app]