@@ -1,5 +1,5 @@
 PREFIX=$(HOME)/usr
 PROJNAME=zeo
-VERSION=1.5.1
+VERSION=1.5.2
 
 DEPENDENCY="zeda=1.2.25;zm=1.2.19"
